CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.20rc1

	- The setgroups() calls now pass in 1 group (the
	  configured group) instead of 0 for compatibility with
	  BSD and Darwin (STR #213)
	- The scheduler's built-in broadcast throttling was
	  ineffective since incoming packets would cause the
	  next group of outgoing packets to be sent immediately
	  rather than waiting for the next time slot (STR #211)
	- Added a new ppdSetConformance() function to set the
	  conformance requirements for PPD files. Currently only
	  two levels are defined, PPD_CONFORM_RELAXED and
	  PPD_CONFORM_STRICT, and the default is the relaxed
	  level (STR #212)
	- The IPP backend did not correctly execute the
	  pictwpstops filter on OSX (STR #210)
	- The LPD backend did not set the banner class when the
	  "banner=yes" option was specified in the device URI
	  (STR #209)
	- The imagetoraster filter did not support all of the
	  page device attributes (STR #208)
	- The pdftops filter incorrectly auto-rotated pages when
	  the user already had specified the proper orientation
	  (STR #207)
	- Fixed AIX shared library support (STR #201)
	- Added support for live testing with Valgrind (STR
	  #193)
	- The CGI programs now collect the list of needed
	  attributes for the class, job, and printer template
	  files (STR #192)
	- The scheduler now passes the first port that is bound
	  to the local loopback or "any" addresses to the CGI
	  programs rather than the port that the browser
	  connected to (STR #103)
	- The cupstestppd program now checks for bad
	  JobPatchFile attributes and incorrect versions of the
	  Manufacturer attribute for HP printers (STR #155)
	- The filter makefile incorrectly installed
	  libcupsimage.a in the filter directory (STR #180)
	- The scheduler did not verify that the job history
	  files define the job-priority and
	  job-originating-user-name attributes (STR #178)
	- The pstops filter didn't handle poorly-formed binary