@@ -1,5 +1,5 @@
 /*
- * "$Id: cupsd.h,v 1.28.2.21 2003/08/01 15:21:05 mike Exp $"
+ * "$Id: cupsd.h,v 1.28.2.22 2003/08/04 19:01:44 mike Exp $"
  *
  *   Main header file for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -22,21 +22,13 @@
  *         WWW: http://www.cups.org
  */
 
-#include <cups/string.h>
-#ifdef __sun
-/*
- * Define FD_SETSIZE to CUPS_MAX_FDS on Solaris to get the correct version of
- * select() for large numbers of file descriptors.
- */
-
-#  define FD_SETSIZE	CUPS_MAX_FDS
-#endif /* __sun */
-
 
 /*
  * Include necessary headers.
  */
 
+#include <cups/http-private.h>
+#include <cups/string.h>
 #include <stdlib.h>
 #include <limits.h>
 #include <errno.h>
@@ -216,5 +208,5 @@ extern void	StopServer(void);
 
 
 /*
- * End of "$Id: cupsd.h,v 1.28.2.21 2003/08/01 15:21:05 mike Exp $".
+ * End of "$Id: cupsd.h,v 1.28.2.22 2003/08/04 19:01:44 mike Exp $".
  */
